@@ -6,7 +6,9 @@
 repositories {
     mavenCentral()
 }
-
+test {
+    jvmArgs '-Xmx2g', '-XX:+PrintGCDetails', '-XX:+PrintGCDateStamps'
+}
 subprojects {
     if (name == "applications" || name == "components") return@subprojects
 
